--- a/MaquinaParada2/index.html
+++ b/MaquinaParada2/index.html
@@ -25,25 +25,25 @@
             </label>
             <label for="celulas">Equipamento:</label>
             <select id="celulas">
-                <option value="celula01">Celula 01</option>
-                <option value="celula02">Celula 02</option>
-                <option value="celula03">Celula 03</option>
-                <option value="celula04">Celula 04</option>
-                <option value="celula05">Celula 05</option>
-                <option value="celula06">Celula 06</option>
-                <option value="celula07">Celula 07</option>
-                <option value="celula08">Celula 08</option>
-                <option value="celula09">Celula 09</option>
-                <option value="celula10">Celula 10</option>
-                <option value="celula11">Celula 11</option>
-                <option value="celula12">Celula 12</option>
-                <option value="celula13">Celula 13</option>
-                <option value="celula14">Celula 14</option>
-                <option value="celula15">Celula 15</option>
-                <option value="celula16">Celula 16</option>
-                <option value="celula17">Celula 17</option>
-                <option value="celula18">Celula 18</option>
-                <option value="celula19">Celula 19</option>
+                <option value="Celula 01">Celula 01</option>
+                <option value="Celula 02">Celula 02</option>
+                <option value="Celula 03">Celula 03</option>
+                <option value="Celula 04">Celula 04</option>
+                <option value="Celula 05">Celula 05</option>
+                <option value="Celula 06">Celula 06</option>
+                <option value="Celula 07">Celula 07</option>
+                <option value="Celula 08">Celula 08</option>
+                <option value="Celula 09">Celula 09</option>
+                <option value="Celula 10">Celula 10</option>
+                <option value="Celula 11">Celula 11</option>
+                <option value="Celula 12">Celula 12</option>
+                <option value="Celula 13">Celula 13</option>
+                <option value="Celula 14">Celula 14</option>
+                <option value="Celula 15">Celula 15</option>
+                <option value="Celula 16">Celula 16</option>
+                <option value="Celula 17">Celula 17</option>
+                <option value="Celula 18">Celula 18</option>
+                <option value="Celula 19">Celula 19</option>
             </select>
         </div>
 
